RESOLVED FIXED277382
[masonry] Fix intrinsic sizing with fixed-size and auto
https://bugs.webkit.org/show_bug.cgi?id=277382
Summary [masonry] Fix intrinsic sizing with fixed-size and auto
Brandon
Reported 2024-07-30 15:23:12 PDT
[masonry] Fix intrinsic sizing with fixed-size and auto
Attachments
Radar WebKit Bug Importer
Comment 1 2024-07-30 15:24:05 PDT
Brandon
Comment 2 2024-07-30 15:29:56 PDT
EWS
Comment 3 2024-07-31 17:02:25 PDT
Committed 281677@main (a829f44a065e): <https://commits.webkit.org/281677@main> Reviewed commits have been landed. Closing PR #31504 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.