[masonry] Fix intrinsic sizing with fixed-size and auto https://bugs.webkit.org/show_bug.cgi?id=277382 rdar://problem/132849745

Reviewed by Sammy Gill.

We were not calculating auto sizes when there is a span and it
went outside of the track sizing range. This is due to masonry
trying to place all the indefinite items in each track, and since the span would
be outside the track range it would be skipped.

The solution is to try to shift the item's start and end to fit within the track.

* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-007-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-007-ref.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/masonry/tentative/intrinsic-sizing/masonry-intrinsic-sizing-cols-007.html: Added.
* Source/WebCore/rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::GridTrackSizingAlgorithm::shouldExcludeGridItemForMasonryTrackSizing const):
* Source/WebCore/rendering/GridTrackSizingAlgorithm.h:

Canonical link: https://commits.webkit.org/281677@main